--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -35,7 +35,11 @@
               <a href="{{ post.link }}">{{ title }}</a> <a href="{{ base_path }}{{ post.url }}" rel="permalink"><i class="fa fa-link" aria-hidden="true" title="permalink"></i><span class="sr-only">Permalink</span></a>
 	 {% endif %}
       {% else %}
-        <a href="{{ base_path }}{{ post.url }}" rel="permalink">{{ title }}</a>
+	    {% if post.collection == 'publications' %}
+	        <a href="{{ post.url }}" rel="permalink">{{ title }}</a>
+	    {% else %}
+        	<a href="{{ base_path }}{{ post.url }}" rel="permalink">{{ title }}</a>
+	    {% endif %}
       {% endif %}
     </h2>
     
