--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -28,15 +28,15 @@
 
     <h2 class="archive__item-title" itemprop="headline">
       {% if post.link %}
-         {% if post.collection == 'publications' %}
-              <a href="{{ post.link }}">{{ title }}</a> <a href="{{ post.url }}" rel="permalink"><i class="fa fa-link" aria-hidden="true" title="permalink"></i><span class="sr-only">Permalink</span></a>
+         {% if post.paperurl == 'publications' %}
+              <a href="{{ post.link }}">{{ title }}</a> <a href="{{ post.paperurl }}" rel="paperurl"><i class="fa fa-link" aria-hidden="true" title="permalink"></i><span class="sr-only">Permalink</span></a>
 
          {% else %}
               <a href="{{ post.link }}">{{ title }}</a> <a href="{{ base_path }}{{ post.url }}" rel="permalink"><i class="fa fa-link" aria-hidden="true" title="permalink"></i><span class="sr-only">Permalink</span></a>
 	 {% endif %}
       {% else %}
 	    {% if post.collection == 'publications' %}
-	        <a href="{{ post.url }}" rel="permalink">{{ title }}</a>
+	        <a href="{{ post.paperurl }}" rel="paperurl">{{ title }}</a>
 	    {% else %}
         	<a href="{{ base_path }}{{ post.url }}" rel="permalink">{{ title }}</a>
 	    {% endif %}
